--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-#TELEGRAM_API=7037898304:AAFfOl-o2RNXyAiw7ZF4As-dhHBROkcbpk8
-TELEGRAM_API=6558076489:AAEXo4cHHpU3H3flQa2NjhQO9qCBugScmeU
+TELEGRAM_API=7037898304:AAFfOl-o2RNXyAiw7ZF4As-dhHBROkcbpk8
+#TELEGRAM_API=6558076489:AAEXo4cHHpU3H3flQa2NjhQO9qCBugScmeU
 LOGGER_LEVEL=debug
 DB_USER=postgres
 DB_PASSWORD=56228478
@@ -7,5 +7,5 @@ DB_NAME=raspygk_db
 DB_HOST=91.215.21.236
 REDIS_ADDR=redis-stack
 REDIS_PORT=6379
-REDIS_PASSWORD=
+REDIS_PASSWORD=RalphDeadwave562208!
 DEBUG=true
